crates/musq/tests/trybuild/fail_sql_malformed2.stderr
error: malformed placeholder
 --> tests/trybuild/fail_sql_malformed2.rs:4:13
  |
4 |     let _ = sql!("SELECT {raw}")?;
  |             ^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `sql` (in Nightly builds, run with -Z macro-backtrace for more info)
